--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,5 +30,5 @@ jobs:
       # Deploy  
       - run: rsync -e "ssh -p 22 -i $HOME/.ssh/id_rsa -o StrictHostKeyChecking=no" --archive --compress --delete ./ui/static/ nginx@79.174.86.105:/var/www/blog.entagir.xyz/static/
       - run: rsync -e "ssh -p 22 -i $HOME/.ssh/id_rsa -o StrictHostKeyChecking=no" --archive --compress --delete ./build/main nginx@79.174.86.105:/var/www/blog.entagir.xyz/main
-      - run: ssh -p 22 -i $HOME/.ssh/id_rsa -o StrictHostKeyChecking=no nginx@79.174.86.105 "pgrep -f blog.entagir.xyz | grep -v $$ | xargs kill"
+      - run: ssh -p 22 -i $HOME/.ssh/id_rsa -o StrictHostKeyChecking=no nginx@79.174.86.105 "pkill -f blog.entagir.xyz &"
       - run: ssh -p 22 -i $HOME/.ssh/id_rsa -o StrictHostKeyChecking=no nginx@79.174.86.105 'cd /var/www/blog.entagir.xyz; bash -c "exec -a blog.entagir.xyz ./main &"'
